✨ Add course brochure download section with PDF link

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <p>Learn insect breeding, care, safety & management with hands-on practical exposure</p>
             <div>
                 <a href="#register" class="cta-button">Register via Google Form</a>
-                <a href="#course-info" class="cta-button cta-secondary">View Course Details</a>
+                <a href="https://pub-b70cb36a6853407fa468c5d6dec16633.r2.dev/139019/rube-chat/chat-attachment/request/7ed1ba42da8aaf536d4d55ebda7f8588b06e62d5e409b7de0dc27e6dda7dd3a8" target="_blank" class="cta-button cta-secondary">📄 Download Course Brochure</a>
             </div>
         </div>
     </section>
@@ -196,6 +196,62 @@
                     <div class="card-icon">♻️</div>
                     <h3>Sustainability Focus</h3>
                     <p>Emphasis on hygiene, safety protocols, and sustainable insect culture practices.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Course Brochure Download Section -->
+    <section class="section bg-light" id="course-brochure">
+        <div class="container">
+            <h2 class="section-title">📋 Course Brochure</h2>
+            <p class="section-subtitle">Download our comprehensive course brochure for detailed information about the curriculum, schedule, and more</p>
+
+            <div style="max-width: 600px; margin: 0 auto; text-align: center;">
+                <div style="background: white; padding: 50px 40px; border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);">
+                    <div style="font-size: 5rem; margin-bottom: 25px; animation: bounce 2s ease-in-out infinite;">📄</div>
+                    <h3 style="color: var(--primary-green); margin-bottom: 20px; font-size: 1.8rem; font-weight: 700;">
+                        Complete Course Information
+                    </h3>
+                    <p style="color: var(--text-gray); margin-bottom: 35px; line-height: 1.8; font-size: 1.1rem;">
+                        Get detailed information about:
+                    </p>
+                    <ul style="text-align: left; color: var(--text-gray); margin: 0 auto 35px; max-width: 400px; list-style: none; padding: 0;">
+                        <li style="padding: 8px 0; padding-left: 30px; position: relative;">
+                            <span style="position: absolute; left: 0; color: var(--primary-green); font-weight: bold;">✓</span>
+                            Complete curriculum & modules
+                        </li>
+                        <li style="padding: 8px 0; padding-left: 30px; position: relative;">
+                            <span style="position: absolute; left: 0; color: var(--primary-green); font-weight: bold;">✓</span>
+                            Course schedule & timings
+                        </li>
+                        <li style="padding: 8px 0; padding-left: 30px; position: relative;">
+                            <span style="position: absolute; left: 0; color: var(--primary-green); font-weight: bold;">✓</span>
+                            Insect cultures covered
+                        </li>
+                        <li style="padding: 8px 0; padding-left: 30px; position: relative;">
+                            <span style="position: absolute; left: 0; color: var(--primary-green); font-weight: bold;">✓</span>
+                            Eligibility & requirements
+                        </li>
+                        <li style="padding: 8px 0; padding-left: 30px; position: relative;">
+                            <span style="position: absolute; left: 0; color: var(--primary-green); font-weight: bold;">✓</span>
+                            About Life Science Education Trust
+                        </li>
+                    </ul>
+
+                    <div style="margin-top: 30px;">
+                        <a href="https://pub-b70cb36a6853407fa468c5d6dec16633.r2.dev/139019/rube-chat/chat-attachment/request/7ed1ba42da8aaf536d4d55ebda7f8588b06e62d5e409b7de0dc27e6dda7dd3a8" target="_blank" download class="cta-button" style="margin: 10px; display: inline-block;">
+                            📥 Download Brochure (PDF)
+                        </a>
+                        <a href="https://pub-b70cb36a6853407fa468c5d6dec16633.r2.dev/139019/rube-chat/chat-attachment/request/7ed1ba42da8aaf536d4d55ebda7f8588b06e62d5e409b7de0dc27e6dda7dd3a8" target="_blank" class="cta-button cta-secondary" style="margin: 10px; display: inline-block;">
+                            👁️ View Online
+                        </a>
+                    </div>
+
+                    <p style="margin-top: 25px; color: var(--text-gray); font-size: 0.9rem; opacity: 0.8;">
+                        💡 Save the brochure for future reference
+                    </p>
                 </div>
             </div>
         </div>
